Fix images taking too much space

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -8,4 +8,8 @@
   @include mq($from: mobile) {
     padding: 2rem;
   }
+
+  img {
+    max-width: 100%;
+  }
 }
